; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_cli.c_bt_mesh_cfg_mod_sub_get_vnd.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_cfg_cli.c_bt_mesh_cfg_mod_sub_get_vnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_msg_ctx = type { i32 }

@CID_NVAL = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@OP_MOD_SUB_GET_VND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bt_mesh_cfg_mod_sub_get_vnd(%struct.bt_mesh_msg_ctx* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.bt_mesh_msg_ctx*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.bt_mesh_msg_ctx* %0, %struct.bt_mesh_msg_ctx** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %6, align 8
  %11 = icmp ne %struct.bt_mesh_msg_ctx* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %4
  %13 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %6, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_msg_ctx, %struct.bt_mesh_msg_ctx* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* @CID_NVAL, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %17, %12, %4
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %5, align 4
  br label %31

24:                                               ; preds = %17
  %25 = load i32, i32* @OP_MOD_SUB_GET_VND, align 4
  %26 = load %struct.bt_mesh_msg_ctx*, %struct.bt_mesh_msg_ctx** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* %9, align 8
  %30 = call i32 @mod_sub_get(i32 %25, %struct.bt_mesh_msg_ctx* %26, i64 %27, i64 %28, i64 %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %24, %21
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @mod_sub_get(i32, %struct.bt_mesh_msg_ctx*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
